# ZeeDB

./: .gcloudignore  .gitignore  Cargo.toml  README.md  TODO.txt  build.rs  deployment.yaml  todos
ast/: Cargo.toml  aggregate_expr.rs  column.rs  column_tests.rs  date_part.rs  expr.rs  expr_tests.rs  function.rs  indent_print.rs  index.rs  lib.rs  procedure.rs  scalar.rs  values.rs
benchmarks/: Cargo.toml  example.rs  main.rs
benchmarks/profiles/: README.md  index-lookup.profile
catalog/: Cargo.toml  bootstrap.rs  catalog.rs  defaults.rs  empty.rs  index.rs  lib.rs  metadata.rs
coordinator/: Cargo.toml  coordinator.rs  coordinator_tests.rs  lib.rs  main.rs
e2e_tests/: Cargo.toml  adventure_works.rs  e2e_tests.rs  execute_tests.rs  lib.rs  optimize_tests.rs  scalar_tests.rs  test_runner.rs  test_suite.rs
e2e_tests/examples/: execute_aggregate_large.testlog  execute_aggregates.testlog  execute_complex_correlated_subquery.testlog  execute_correlated_subquery.testlog  execute_index.testlog  execute_join_nested_loop.testlog  execute_limit.testlog  optimize_aggregate.testlog  optimize_correlated.testlog  optimize_ddl.testlog  optimize_distinct.testlog  optimize_dml.testlog  optimize_enforcers.testlog  optimize_filter.testlog  optimize_join.testlog  optimize_limit.testlog  optimize_set.testlog  optimize_with.testlog
e2e_tests/tests/: aggregate.testlog  complex_correlated_subquery.testlog  correlated_exists.testlog  correlated_subquery.testlog  ddl.testlog  dml.testlog  explain.testlog  join_nested_loop.testlog  join_using.testlog  limit.testlog  literals.testlog  scalar_expressions.testlog  set_operations.testlog  subquery_join.testlog  update_index.testlog  with.testlog
execute/: Cargo.toml  adventure_works.rs  aggregate.rs  catalog.rs  eval.rs  eval_tests.rs  exception.rs  execute.rs  execute_tests.rs  hash_table.rs  hash_table_tests.rs  index.rs  join.rs  lib.rs  map.rs  optimize_tests.rs  remote_execution.rs  scalar_tests.rs  test_suite.rs  topic.rs  topic_tests.rs  tracing.rs  uuid.rs
execute/examples/: execute_builtin_function.testlog  execute_comparisons.testlog  execute_ddl.testlog  execute_dml.testlog  execute_elementary_math.testlog  execute_explain.testlog  execute_index.testlog  execute_join_hash.testlog  execute_join_nested_loop.testlog  execute_join_using.testlog  execute_logical_functions.testlog  execute_subquery_join.testlog  execute_update_index.testlog  optimize_aggregate.testlog  optimize_correlated.testlog  optimize_ddl.testlog  optimize_distinct.testlog  optimize_dml.testlog  optimize_enforcers.testlog  optimize_filter.testlog  optimize_join.testlog  optimize_limit.testlog  optimize_set.testlog  optimize_sort.testlog  optimize_with.testlog
kernel/: Cargo.toml  any_array.rs  array.rs  array_like.rs  array_macros.rs  array_tests.rs  bitmask.rs  bool_array.rs  data_type.rs  exception.rs  fixed_width.rs  lib.rs  next.rs  primitive_array.rs  record_batch.rs  record_batch_tests.rs  string_array.rs
parser/: Cargo.toml  convert.rs  convert_tests.rs  lib.rs  parser.rs  parser_tests.rs  sequences.rs  server.rs
parser/examples/aggregate/: count.txt  distinct.txt  group_by.txt  group_by_having.txt  sum.txt
parser/examples/correlated/: exists.txt  in.txt  join_on_in.txt  join_on_subquery.txt  subquery.txt
parser/examples/ddl/: drop_table.txt
parser/examples/dml/: delete.txt  insert_subquery.txt  insert_values.txt  update.txt  update_join.txt  update_join_subquery.txt  update_subquery.txt  update_where_in.txt
parser/examples/expr/: cast_column.txt  cast_literal.txt  date_literal.txt  numeric_max.txt  numeric_neg.txt  numeric_one.txt  numeric_zero.txt  rename_column.txt  select_from.txt  select_literal.txt
parser/examples/filter/: where.txt  where_exists.txt  where_in_correlated_subquery.txt  where_in_subquery.txt  (+2 more)
planner/: Cargo.toml  bootstrap.rs  cardinality_estimation.rs  catalog.rs  convert.rs  cost.rs  distribution.rs  lib.rs  optimize.rs  parser.rs  parser_tests.rs  rewrite.rs  rule.rs  search_space.rs  unnest.rs
protos/: .gitignore  Cargo.toml  build.rs  lib.rs  page_stream.rs  record_stream.rs  rpc.proto  runtime.rs  worker.proto
pubsub/: Cargo.toml  lib.rs  topic.rs  topic_tests.rs  uuid.rs
remote_execution/: Cargo.toml  lib.rs  remote_execution.rs  rpc_remote_execution.rs
rpc/: .gitignore  Cargo.toml  build.rs  lib.rs  page_stream.rs  rpc.proto
sqllogictest/: Cargo.toml
sqllogictest/src/: ast.rs  main.rs  parser.rs  runner.rs
sqllogictest/tests/: aggregate.rs  cast.rs  cte.rs  duckdb.rs  index.rs  runner.rs  types.rs
src/execute/: Cargo.toml  adventure_works.rs  aggregate.rs  aggregate_tests.rs  byte_key.rs  byte_key_tests.rs  catalog.rs  catalog_provider.rs  catalog_provider_tests.rs  common.rs  error.rs  eval.rs  execute.rs  execute_benches.rs  execute_tests.rs  filter.rs  hash_table.rs  hash_table_tests.rs  index.rs  join.rs  lib.rs  optimize_tests.rs  sort.rs  state.rs  test_suite.rs
src/helloworld/: Cargo.toml  build.rs  client.rs
src/parser/: Cargo.toml  catalog.rs  client.rs  convert.rs  convert_tests.rs  int128.rs  lib.rs  lib_tests.rs  parser.rs  parser_tests.rs  server.rs
src/planner/: Cargo.toml  cost.rs  lib.rs  optimize.rs  optimize_tests.rs  rewrite.rs  rewrite_tests.rs  rule.rs  search_space.rs
src/storage/: Cargo.toml  arc.rs  arc_tests.rs  art.rs  art_tests.rs  bits.rs  byte_key.rs  byte_key_tests.rs  bytes.rs  bytes_tests.rs  cluster.rs  cluster_tests.rs  counter.rs  counter_tests.rs  heap.rs  heap_tests.rs  isolation.rs  lib.rs  page.rs  page_tests.rs  storage.rs  trie.rs  trie_tests.rs
statistics/: Cargo.toml  column_statistics.rs  column_statistics_tests.rs  global_statistics.rs  histogram.rs  histogram_tests.rs  lib.rs  statistics.rs  table_statistics.rs
storage/: Cargo.toml  art.rs  art_tests.rs  counter_tests.rs  heap.rs  heap_tests.rs  lib.rs  page.rs  page_tests.rs  storage.rs
worker/: Cargo.toml  lib.rs  main.rs  record_stream.rs  worker.rs  worker_tests.rs
zetasql/: .gitignore  Cargo.toml  build.rs  lib.rs  local_service.rs  zetasql.rs
zetasql_build/: Cargo.toml  main.rs
(+907 files in other folders)
