[workspace]
members = [
    "ast",
    "benchmarks",
    "catalog",
    "coordinator",
    "e2e_tests",
    "encoding",
    "execute",
    "globals",
    "kernel",
    "log",
    "log_attrs",
    "parser",
    "planner",
    "rpc",
    "remote_execution",
    "sequences",
    "statistics",
    "sqllogictest",
    "storage",
    "worker",
    "zetasql",
]