[workspace]
members = [
    "ast",
    "benchmarks",
    "defaults",
    "coordinator",
    "e2e_tests",
    "encoding",
    "execute",
    "globals",
    "kernel",
    "log",
    "log_attrs",
    "planner",
    "rpc",
    "remote_execution",
    "statistics",
    "sqllogictest",
    "storage",
    "worker",
    "zetasql",
]