[package]
name = "ast"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.11", features = [] }
serde = { version = "1.0.123", features = ["derive"] }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
bincode = "1.3.1"