[package]
name = "ast"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.11", features = [] }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
serde = { version = "1.0.123", features = ["derive"] }
zetasql = { path = "../zetasql" }

[dev-dependencies]
bincode = "1.3.1"