[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4.11", features = [] }
tonic = "0.4.3"
rand = { version = "0.8.2", features = ["small_rng"]}

coordinator = { path = "../coordinator" }
protos = { path = "../protos" }
worker = { path = "../worker" }

[[bin]]
name = "benchmarks"
path = "main.rs"