[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"
publish = false

[lib] 
path = "lib.rs"

[dependencies]

[dev-dependencies]
ast = { path = "../ast" }
chrono = { version = "0.4.11", features = [] }
criterion = "0.3"
e2e_tests = { path = "../e2e_tests" }
kernel = { path = "../kernel" }
pprof = { version = "0.4.3", features = ["flamegraph", "criterion"]}
rand = { version = "0.8.2", features = ["small_rng"]}
serde_json = "1.0.59"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"

[[bench]]
name = "example"
path = "example.rs"
harness = false