[package]
name = "catalog"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
once_cell = "1.7.2"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }

ast = { path = "../ast" }
catalog_types = { path = "../catalog_types" }
context = { path = "../context" }
kernel = { path = "../kernel" }
parser = { path = "../parser" }
planner = { path = "../planner" }
protos = { path = "../protos" }
remote_execution = { path = "../remote_execution" }
statistics = { path = "../statistics" }
zetasql = { path = "../zetasql" }