[package]
name = "coordinator"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"
rand = { version = "0.8.2", features = ["small_rng"] }
rayon = "1.5"

ast = { path = "../ast" }
catalog = { path = "../catalog" }
parser = { path = "../parser" }
planner = { path = "../planner" }
rpc = { path = "../rpc" }
remote_execution = { path = "../remote_execution" }
sequences = { path = "../sequences" }
statistics = { path = "../statistics" }
kernel = { path = "../kernel" }

[dev-dependencies]
worker = { path = "../worker" }