[package]
name = "coordinator"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[[bin]]
name = "zeedb-coordinator"
path = "main.rs"

[dependencies]
ast = { path = "../ast" }
bincode = "1.3.1"
defaults = { path = "../defaults" }
kernel = { path = "../kernel" }
log = { path = "../log" }
planner = { path = "../planner" }
rand = { version = "0.8.2", features = ["small_rng"] }
remote_execution = { path = "../remote_execution" }
rpc = { path = "../rpc" }
statistics = { path = "../statistics" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"

[dev-dependencies]
worker = { path = "../worker" }