[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.11", features = [] }
futures = { version = "0.3.13", features = [] }
once_cell = "1.7.2"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.3"
rand = { version = "0.8.2", features = ["small_rng"]}
regex = "1.4.2"

ast = { path = "../ast" }
catalog = { path = "../catalog" }
catalog_types = { path = "../catalog_types" }
context = { path = "../context" }
coordinator = { path = "../coordinator" }
execute = { path = "../execute" }
kernel = { path = "../kernel" }
parser = { path = "../parser" }
planner = { path = "../planner" }
protos = { path = "../protos" }
remote_execution = { path = "../remote_execution" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }
worker = { path = "../worker" }