[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
once_cell = "1.7.2"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.3"

ast = { path = "../ast" }
coordinator = { path = "../coordinator" }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
worker = { path = "../worker" }