[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
bincode = "1.3.1"
catalog = { path = "../catalog" }
coordinator = { path = "../coordinator" }
difference = "2.0.0"
kernel = { path = "../kernel" }
log = { path = "../log" }
once_cell = "1.7.2"
rpc = { path = "../rpc" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.3"
worker = { path = "../worker" }