[package]
name = "execute"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.11", features = [] }
futures = { version = "0.3.13", features = [] }
num-traits = "0.2.14"
rand = { version = "0.8.2", features = ["small_rng"]}
regex = "1.4.2"
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }

ast = { path = "../ast" }
context = { path = "../context" }
kernel = { path = "../kernel" }
protos = { path = "../protos" }
remote_execution = { path = "../remote_execution" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }
zetasql = { path = "../zetasql" }