[package]
name = "execute"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
bincode = "1.3.1"
chrono = { version = "0.4.11", features = [] }
globals = { path = "../globals" }
kernel = { path = "../kernel" }
log = { path = "../log" }
num-traits = "0.2.14"
rand = { version = "0.8.2", features = ["small_rng"]}
regex = "1.4.2"
remote_execution = { path = "../remote_execution" }
rpc = { path = "../rpc" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
zetasql = { path = "../zetasql" }