[package]
name = "kernel"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.11", features = [] }
serde = { version = "1.0.123", features = ["derive"] }
twox-hash = { version = "1.6.0", features = [] }
zetasql = { path = "../zetasql" }