[package]
name = "parser"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = { version = "0.4.11", features = [] }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"
prost-types = "0.7.0"
time = "0.1.39"

ast = { path = "../ast" }
catalog = { path = "../catalog" }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
sequences = { path = "../sequences" }
zetasql = { path = "../zetasql" }