[package]
name = "parser"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
catalog = { path = "../catalog" }
chrono = { version = "0.4.11", features = [] }
kernel = { path = "../kernel" }
log = { path = "../log" }
prost-types = "0.7.0"
rpc = { path = "../rpc" }
sequences = { path = "../sequences" }
time = "0.1.39"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"
zetasql = { path = "../zetasql" }