[package]
name = "planner"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
catalog = { path = "../catalog" }
chrono = { version = "0.4.11", features = [] }
kernel = { path = "../kernel" }
parser = { path = "../parser" }
rand = { version = "0.8.2", features = ["small_rng"]}
remote_execution = { path = "../remote_execution" }
rpc = { path = "../rpc" }
sequences = { path = "../sequences" }
statistics = { path = "../statistics" }
zetasql = { path = "../zetasql" }