[package]
name = "planner"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
defaults = { path = "../defaults" }
chrono = { version = "0.4.11", features = [] }
kernel = { path = "../kernel" }
log = { path = "../log" }
once_cell = "1.7.2"
prost-types = "0.7.0"
rand = { version = "0.8.2", features = ["small_rng"]}
remote_execution = { path = "../remote_execution" }
rpc = { path = "../rpc" }
sequences = { path = "../sequences" }
statistics = { path = "../statistics" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"
zetasql = { path = "../zetasql" }