[package]
name = "protos"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
futures = "0.3.13"
grpcio = { version = "0.8.2", default-features = false, features = ["prost-codec"]}
prost = "0.7.0"
prost-types = "0.7.0"

[build-dependencies]
grpcio-compiler = { version = "0.8.0", default-features = false, features = ["prost-codec"]}