[package]
name = "protos"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
futures = "0.3.13"
once_cell = "1.5.2"
prost = "0.7.0"
prost-types = "0.7.0"
tokio = { version = "1.5.0", features = ["rt", "rt-multi-thread"] }
tonic = "0.4.3"

[build-dependencies]
tonic-build = "0.4.2"