[package]
name = "pubsub"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
once_cell = "1.5.2"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
rand = { version = "0.8.2", features = ["small_rng"]}
protos = { path = "../protos" }
kernel = { path = "../kernel" }