[package]
name = "remote_execution"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
futures = { version = "0.3.13", features = [] }
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.3"
regex = "1.4.2"

ast = { path = "../ast" }
context = { path = "../context" }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
statistics = { path = "../statistics" }