[package]
name = "remote_execution"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ast = { path = "../ast" }
bincode = "1.3.1"
futures = { version = "0.3.17", features = [] }
kernel = { path = "../kernel" }
log = { path = "../log" }
once_cell = "1.7.2"
regex = "1.4.2"
rpc = { path = "../rpc" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"