[package]
name = "rpc"
version = "0.1.0"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
futures = { version = "0.3.13", features = [] }
once_cell = "1.7.2"
prost = "0.7.0"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"

[build-dependencies]
tonic-build = "0.4.2"