[package]
name = "sqllogictest"
description = "A driver for sqllogictest, a SQL correctness testing framework."
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.42"
ast = { path = "../ast" }
bincode = "1.3.1"
catalog = { path = "../catalog" }
chrono = { version = "0.4.11", features = [] }
coordinator = { path = "../coordinator" }
kernel = { path = "../kernel" }
lazy_static = "1.0.0"
md-5 = "0.9.0"
once_cell = "1.7.2"
parser = { path = "../parser" }
rand = { version = "0.8.2", features = ["small_rng"]}
regex = "1.5.4"
rpc = { path = "../rpc" }
serde_json = "1.0.64"
tokio = "1.8.1"
tonic = "0.4.3"
walkdir = "2.3.2"
worker = { path = "../worker" }