[package]
name = "statistics"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
hyperloglogplus = "0.2.2"
rand = { version = "0.8.2", features = ["small_rng"]}
serde = { version = "1.0.123", features = ["derive"] }
twox-hash = { version = "1.6.0", features = [] }

kernel = { path = "../kernel" }