[package]
name = "storage"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
packed_simd = { package = "packed_simd_2", git = "https://github.com/rust-lang/packed_simd" }
twox-hash = { version = "1.6.0", features = [] }
context = { path = "../context" }
kernel = { path = "../kernel" }
statistics = { path = "../statistics" }

[dev-dependencies]
rand = { version = "0.8.2", features = ["small_rng"]}