[package]
name = "storage"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
kernel = { path = "../kernel" }
packed_simd = { package = "packed_simd_2", version = "0.3.6" }
statistics = { path = "../statistics" }
twox-hash = { version = "1.6.0", features = [] }

[dev-dependencies]
rand = { version = "0.8.2", features = ["small_rng"]}