[package]
name = "worker"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
futures = { version = "0.3.13", features = [] }
tokio = { version = "1.5.0", features = ["rt-multi-thread"] }
tonic = "0.4.3"
rand = { version = "0.8.2", features = ["small_rng"]}
rayon = "1.5"

ast = { path = "../ast" }
context = { path = "../context" }
execute = { path = "../execute" }
kernel = { path = "../kernel" }
protos = { path = "../protos" }
remote_execution = { path = "../remote_execution" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }