[package]
name = "worker"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[dependencies]
bincode = "1.3.1"
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"
rand = { version = "0.8.2", features = ["small_rng"]}
rayon = "1.5"

ast = { path = "../ast" }
execute = { path = "../execute" }
kernel = { path = "../kernel" }
rpc = { path = "../rpc" }
remote_execution = { path = "../remote_execution" }
statistics = { path = "../statistics" }
storage = { path = "../storage" }