[package]
name = "worker"
version = "0.1.0"
edition = "2018"

[lib] 
path = "lib.rs"

[[bin]]
name = "zeedb-worker"
path = "main.rs"

[dependencies]
ast = { path = "../ast" }
bincode = "1.3.1"
execute = { path = "../execute" }
globals = { path = "../globals" }
kernel = { path = "../kernel" }
log = { path = "../log" }
rand = { version = "0.8.2", features = ["small_rng"]}
remote_execution = { path = "../remote_execution" }
rpc = { path = "../rpc" }
serde = { version = "1.0.123", features = ["derive"] }
statistics = { path = "../statistics" }
storage = { path = "../storage" }
tokio = { version = "1.7.1", features = ["rt-multi-thread"] }
tonic = "0.4.3"