[package]
name = "zetasql_build"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
futures = "0.3.13"
grpcio = { version = "0.8.2", features = ["prost-codec"]}
grpcio-compiler = { version = "0.8.0", features = ["prost-codec"]}
prost = "0.7.0"
prost-types = "0.7.0"