[package]
name = "execute"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = "2.0.0"
fnv = "1.0.3"
num-traits = "0.2.14"
regex = "1"
ast = { path = "../ast" }
catalog = { path = "../catalog" }
parser = { path = "../parser" }
planner = { path = "../planner" }
storage = { path = "../storage" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
fixtures = { path = "../fixtures" }