[package]
name = "execute"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = { version = "2.0.0", features = ["simd"] }
chrono = { version = "0.4.11", features = ["serde"] }
num-traits = "0.2.14"
once_cell = "1.5.2"
rand = "0.7.3"
regex = "1.4.2"
ast = { path = "../ast" }
catalog = { path = "../catalog" }
kernel = { path = "../kernel" }
parser = { path = "../parser" }
planner = { path = "../planner" }
storage = { path = "../storage" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
test_fixtures = { path = "../test_fixtures" }