[package]
name = "helloworld"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
name = "helloworld-server"
path = "server.rs"

[[bin]]
name = "helloworld-client"
path = "client.rs"

[dependencies]
tonic = "0.1.1"
prost = "0.6.1"
prost-types = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.1.1"