[package]
name = "parser"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
chrono = "0.4"
encoding = { path = "../encoding" }
futures = "0.3.4"
node = { path = "../node" }
prost-types = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.1.1"
zetasql = { path = "../zetasql" }