[package]
name = "parser"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = { version = "2.0.0", features = ["simd"] }
ast = { path = "../ast" }
chrono = "0.4.11"
futures = "0.3.4"
once_cell = "1.5.2"
prost-types = "0.6.1"
time = "0.1.39"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2.0"
regex = "1.4.2"
catalog = { path = "../catalog" }
encoding = { path = "../encoding" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
test_fixtures = { path = "../test_fixtures" }