[package]
name = "planner"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = "2.0.0"
regex = "1"
ast = { path = "../ast" }
encoding = { path = "../encoding" }
parser = { path = "../parser" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
fixtures = { path = "../fixtures" }