[package]
name = "planner"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = { version = "2.0.0", features = ["simd"] }
regex = "1"
ast = { path = "../ast" }
catalog = { path = "../catalog" }
encoding = { path = "../encoding" }
parser = { path = "../parser" }
storage = { path = "../storage" }
zetasql = { path = "../zetasql" }

[dev-dependencies]
test_fixtures = { path = "../test_fixtures" }