[package]
name = "planner"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
regex = "1.4.2"
ast = { path = "../ast" }
catalog = { path = "../catalog" }
encoding = { path = "../encoding" }
parser = { path = "../parser" }
storage = { path = "../storage" }
zetasql = { path = "../zetasql" }