[package]
name = "storage"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
arrow = { version = "2.0.0", features = ["simd"] }
hyperloglogplus = "0.2.2"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
regex = "1.4.2"
ast = { path = "../ast" }
catalog = { path = "../catalog" }

[dev-dependencies]
rand = "0.7.3"